--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,10 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
+\# filter=lfs diff=lfs merge=lfs -text
+the filter=lfs diff=lfs merge=lfs -text
+specific filter=lfs diff=lfs merge=lfs -text
+your filter=lfs diff=lfs merge=lfs -text
+Or filter=lfs diff=lfs merge=lfs -text
+path filter=lfs diff=lfs merge=lfs -text
+to filter=lfs diff=lfs merge=lfs -text
+large filter=lfs diff=lfs merge=lfs -text
+file filter=lfs diff=lfs merge=lfs -text
